GH-PAGES - Fact, not fiction.
The current stable version on the gh-pages branch still requires being
on the Download List.

One day! One day, I swear!

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<strong>Direct:</strong><br />
 						<ol>
 							<li>Copy the <span class='get_bookmarklet fake_url'>bookmarklet's link</span>.</li>
-							<li>Navigate to the online store.</li>
+							<li>Navigate to the Download List on the online store.</li>
 							<li>Paste into your browser's address bar.</li>
 							<li>Prepend <strong>javascript:</strong> to the start if it's not already there.</li>
 							<li>Submit.</li>
