GH-PAGES - I'm a genius.
With a capital T.

Did you know? My local testing version is named psdle instead of index,
I should change that.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<div id='container'>
 			<div id='header' class='psdle_blue'>
-				<a href='//repod.github.io/psdle'><img id='psdle_logo' src='logo/3_psdle_mini.png' alt='psdle' /></a>
+				<a href='//repod.github.io/psdle'"><img id='psdle_logo' src='logo/3_psdle_mini.png' alt='psdle' /></a>
 				<div id='menu'>
 					<a href='#' title="Back to top" id="btt" class='start_hidden'><i class="fa fa-arrow-up"></i></a>
 					<a href='#features' title="Features"><i class="fa fa-star"></i></a>
@@ -39,7 +39,7 @@
 				</div>
 				<div class='module'>
 					<a name="features">
-						<h3><i class="fa fa-star"></i> Features <i class="module_toggle fa fa-caret-down"></i></h3>
+						<h3 tabindex="0"><i class="fa fa-star"></i> Features <i class="module_toggle fa fa-caret-down"></i></h3>
 					</a>
 					<div>
 						<dl>
@@ -61,16 +61,16 @@
 				</div>
 				<div class='module'>
 					<a name="getting_started">
-						<h3><i class="fa fa-check-square-o"></i> Getting Started <i class="module_toggle fa fa-caret-up"></i></h3>
+						<h3 tabindex="0"><i class="fa fa-check-square-o"></i> Getting Started <i class="module_toggle fa fa-caret-up"></i></h3>
 					</a>
 					<div>
-						<span class='psdle_fancy_bar'><span id='get_userscript'>Userscript</span><a href="//wikipedia.org/wiki/Greasemonkey" target="_blank"><span>?</span></a></span>
-						<span class='psdle_fancy_bar'><span class='get_bookmarklet'>Bookmarklet</span><a href="//wikipedia.org/wiki/Bookmarklet" target="_blank"><span>?</span></a></span><br />
+						<span class='psdle_fancy_bar'><span id='get_userscript' tabindex="0">Userscript</span><a href="//wikipedia.org/wiki/Greasemonkey" target="_blank"><span>?</span></a></span>
+						<span class='psdle_fancy_bar'><span class='get_bookmarklet' tabindex="0">Bookmarklet</span><a href="//wikipedia.org/wiki/Bookmarklet" target="_blank"><span>?</span></a></span><br />
 						<br />
 						<strong>Direct:</strong><br />
 						<ol>
-							<li>Copy the <span class='get_bookmarklet fake_url'>bookmarklet's link</span>.</li>
-							<li>Navigate to the Download List on the online store.</li>
+							<li>Copy the <span class='get_bookmarklet fake_url' tabindex="0">bookmarklet's link</span>.</li>
+							<li>Navigate to the online store.</li>
 							<li>Paste into your browser's address bar.</li>
 							<li>Prepend <strong>javascript:</strong> to the start if it's not already there.</li>
 							<li>Submit.</li>
@@ -79,7 +79,7 @@
 				</div>
 				<div class='module'>
 					<a name="screenshots">
-						<h3><i class="fa fa-camera"></i> Screenshots <i class="module_toggle fa fa-caret-down"></i></h3>
+						<h3 tabindex="0"><i class="fa fa-camera"></i> Screenshots <i class="module_toggle fa fa-caret-down"></i></h3>
 					</a>
 					<div class='start_hidden'>
 						<iframe class="imgur-album" width="100%" height="550" frameborder="0" src="//imgur.com/a/4oRjv/embed?background=292929&text=ffffff&link=4e76c9&thumbs=true"></iframe>
@@ -87,7 +87,7 @@
 				</div>
 				<div class='module'>
 					<a name="paq">
-						<h3><i class="fa fa-question"></i> P.A.Q. (Potentially Asked Questions) <i class="module_toggle fa fa-caret-down"></i></h3>
+						<h3 tabindex="0"><i class="fa fa-question"></i> P.A.Q. (Potentially Asked Questions) <i class="module_toggle fa fa-caret-down"></i></h3>
 					</a>
 					<div class='start_hidden'>
 						<strong>Is this safe or a ploy to phish account details?</strong> <br />
