--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				</div>
 				<div class='module'>
 					<a name="features">
-						<h3 tabindex="0"><i class="fa fa-star"></i> Features <i class="module_toggle fa fa-caret-down"></i></h3>
+						<h3 tabindex="0"><i class="fa fa-star"></i> Features <i class="module_toggle fa fa-caret-up"></i></h3>
 					</a>
 					<div>
 						<dl>
