GH-PAGES - To the repo!
Or not, I'm a commit message not a cop.

Hint at development versions for those seeking to live on the wild side.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 							<li>Prepend <strong>javascript:</strong> to the start if it's not already there.</li>
 							<li>Submit.</li>
 						</ol>
+						<small>The latest and (hopefully) greatest versions of PSDLE can be found  <span class='get_repo fake_url' tabindex="0">in the repository</span>.<br />
+						However, they may contain more bugs, be unstable, or have features disabled. <small>(Sounds like non-repository versions)</small><br />
+						Use repository versions at your own risk.</small>
 					</div>
 				</div>
 				<div class='module'>
