GH-PAGES - Out with the old, in with the new!
The shiny new PSDLE has gone stable! Ish!

Legacy versions are available starting at
da72902be7847ec93ae85555ab6f0e3b2f8948c4

--- a/index.html
+++ b/index.html
@@ -70,14 +70,17 @@
 						<strong>Direct:</strong><br />
 						<ol>
 							<li>Copy the <span class='get_bookmarklet fake_url' tabindex="0">bookmarklet's link</span>.</li>
-							<li>Navigate to the Download List on the online store.</li>
+							<li>Navigate to the the online store.</li>
 							<li>Paste into your browser's address bar.</li>
 							<li>Prepend <strong>javascript:</strong> to the start if it's not already there.</li>
 							<li>Submit.</li>
+							<li>Click the PSDLE logo in the bottom-left corner.</li>
 						</ol>
 						<small>The latest and (hopefully) greatest versions of PSDLE can be found  <span class='get_repo fake_url' tabindex="0">in the repository</span>.<br />
 						However, they may contain more bugs, be unstable, or have features disabled. <small>(Sounds like non-repository versions)</small><br />
-						Use repository versions at your own risk.</small>
+						Use repository versions at your own risk.</small><br /><br />
+						
+						<small>Legacy versions are available <a href='https://github.com/RePod/psdle/tree/da72902be7847ec93ae85555ab6f0e3b2f8948c4'>here</a>. Bug reports will not be accepted and support will not be given for these.</small>
 					</div>
 				</div>
 				<div class='module'>
@@ -121,7 +124,7 @@
 				</span><br /><br />
 				<span class='text'>
 					PSDLE is not sponsored, endorsed, or created by Sony, SNEI, SCEA, SCEE, SCEI, or affiliates.<br />
-					Third-party content (icons, names) re-rendered by PSDLE is provided from the download list.
+					Third-party content (icons, names) re-rendered by PSDLE is provided from the Entitlements API.
 				</span>
 			</div>
 		</div>
