--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 			<div id='header' class='psdle_blue'>
 				<a href='//repod.github.io/psdle'"><img id='psdle_logo' src='logo/3_psdle_mini.png' alt='psdle' /></a>
 				<div id='menu'>
-					<a href='#' title="Back to top" id="btt" class='start_hidden'><i class="fa fa-arrow-up"></i></a>
-					<a href='#features' title="Features"><i class="fa fa-star"></i></a>
-					<a href='#getting_started' title="Getting Started"><i class="fa fa-check-square-o"></i></a>
-					<a href='#screenshots' title="Screenshots"><i class="fa fa-camera"></i></a>
-					<a href='#paq' title="P.A.Q."><i class="fa fa-question"></i></a>
+					<a href='#' title="Back to top" id="btt" class='start_hidden'><i class="fa fa-arrow-up fa-fw"></i></a>
+					<a href='#features' title="Features"><i class="fa fa-star fa-fw"></i></a>
+					<a href='#getting_started' title="Getting Started"><i class="fa fa-check-square-o fa-fw"></i></a>
+					<a href='#screenshots' title="Screenshots"><i class="fa fa-camera fa-fw"></i></a>
+					<a href='#paq' title="P.A.Q."><i class="fa fa-question fa-fw"></i></a>
 					<div class='vline'></div>
-					<a href='psdle.user.js' id='get_us' title="Download the Userscript.<br />Activates automatically!"><i class="fa fa-download"></i></a>
-					<a href='javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);' id='get_bookmark' title="Bookmark or copy this!<br />Access bookmark from the store."><span style='display:none'>Run PSDLE</span><i class="fa fa-bookmark"></i></a>
+					<a href='psdle.user.js' id='get_us' title="Download the Userscript.<br />Activates automatically!"><i class="fa fa-download fa-fw"></i></a>
+					<a href='javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);' id='get_bookmark' title="Bookmark or copy this!<br />Access bookmark from the store."><span style='display:none'>Run PSDLE</span><i class="fa fa-bookmark fa-fw"></i></a>
 					<div class='vline'></div>
-					<a href='//repod.github.io/psdle' title="Home"><i class="fa fa-home"></i></a>
-					<a href='//github.com/RePod/psdle/' title="Repository"><i class="fa fa-code-fork"></i></a>
-					<a href='//github.com/RePod/psdle/wiki/Submit-a-Bug-or-Translation'><i class="fa fa-exclamation-circle"></i></a>
+					<a href='//repod.github.io/psdle' title="Home"><i class="fa fa-home fa-fw"></i></a>
+					<a href='//github.com/RePod/psdle/' title="Repository"><i class="fa fa-code-fork fa-fw"></i></a>
+					<a href='//github.com/RePod/psdle/wiki/Submit-a-Bug-or-Translation'><i class="fa fa-exclamation-circle fa-fw"></i></a>
 				</div>
 			</div>
 			<div id='content'>
@@ -39,7 +39,7 @@
 				</div>
 				<div class='module'>
 					<a name="features">
-						<h3 tabindex="0"><i class="fa fa-star"></i> Features <i class="module_toggle fa fa-caret-up"></i></h3>
+						<h3 tabindex="0"><i class="fa fa-star fa-fw"></i> Features <i class="module_toggle fa fa-caret-up"></i></h3>
 					</a>
 					<div>
 						<dl>
@@ -61,7 +61,7 @@
 				</div>
 				<div class='module'>
 					<a name="getting_started">
-						<h3 tabindex="0"><i class="fa fa-check-square-o"></i> Getting Started <i class="module_toggle fa fa-caret-up"></i></h3>
+						<h3 tabindex="0"><i class="fa fa-check-square-o fa-fw"></i> Getting Started <i class="module_toggle fa fa-caret-up"></i></h3>
 					</a>
 					<div>
 						<span class='psdle_fancy_bar'><span id='get_userscript' tabindex="0">Userscript</span><a href="//wikipedia.org/wiki/Greasemonkey" target="_blank"><span>?</span></a></span>
@@ -85,7 +85,7 @@
 				</div>
 				<div class='module'>
 					<a name="screenshots">
-						<h3 tabindex="0"><i class="fa fa-camera"></i> Screenshots <i class="module_toggle fa fa-caret-down"></i></h3>
+						<h3 tabindex="0"><i class="fa fa-camera fa-fw"></i> Screenshots <i class="module_toggle fa fa-caret-down"></i></h3>
 					</a>
 					<div class='start_hidden'>
 						<iframe class="imgur-album" width="100%" height="550" frameborder="0" src="//imgur.com/a/4oRjv/embed?background=292929&text=ffffff&link=4e76c9&thumbs=true"></iframe>
@@ -93,15 +93,27 @@
 				</div>
 				<div class='module'>
 					<a name="paq">
-						<h3 tabindex="0"><i class="fa fa-question"></i> P.A.Q. (Potentially Asked Questions) <i class="module_toggle fa fa-caret-down"></i></h3>
+						<h3 tabindex="0"><i class="fa fa-question fa-fw"></i> P.A.Q. (Potentially Asked Questions) <i class="module_toggle fa fa-caret-down"></i></h3>
 					</a>
 					<div class='start_hidden'>
 						<strong>Is this safe or a ploy to phish account details?</strong> <br />
-						Yes it is safe, no it is not for phishing account details.<br />
-						I put it on GitHub for a reason, feel free to view the horribly effective code yourself and decide.<br />
-						If/when I get pull requests I'll let them sit and look through them while allowing the "community" to as well.<br />
+						<span>
+							Yes it is safe, no it is not for phishing account details.<br />
+							I put it on GitHub for a reason, feel free to view the horribly effective code yourself and decide.<br />
+							If/when I get pull requests I'll let them sit and look through them while allowing the "community" to as well.<br />
+							<br />
+							If authentication details were left around openly on the download list page I would take my concerns elsewhere.
+						</span><br />
 						<br />
-						If authentication details were left around openly on the download list page I would take my concerns elsewhere.<br />
+						<strong>Can it go any faster?</strong> <br />
+						<span>Disabling "Catalog" during startup will significantly decrease the time between startup and the list at the cost of less features.</span><br />
+						<br />
+						<strong>Does the search box support <a href="//wikipedia.org/wiki/Regular_expression" target="_blank">regex</a>?</strong><br />
+						<span>
+							Yes! Simply wrap the regex in /, like usual.<br />
+							PSDLE supports the /i modifier and a custom /d modifier which <strong>excludes</strong> matches.<br />
+							For more information about Javascript Regex, <a href="//developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions" target="_blank">click here</a>.<br />
+						</span>
 						<br />
 						More soon(tm).
 					</div>
@@ -109,18 +121,18 @@
 			</div>
 			<div id='footer' class='psdle_blue'>
 				<span>
-					<a href='#'><i class="fa fa-arrow-up" style='font-size:16px;'></i> Back to top</a><br />
-					<a href='//fortawesome.github.io/Font-Awesome/'><i class="fa fa-flag" style='font-size:16px;'></i> Font Awesome</a><br />
-					<a href='//jquery.com'><i class="fa fa-external-link" style='font-size:16px;'></i> jQuery</a><br />
-					<a href='//jqueryui.com'><i class="fa fa-external-link" style='font-size:16px;'></i> jQuery UI</a><br />
-					<a href='//github.com/jquery/jquery-color/'><i class="fa fa-external-link" style='font-size:16px;'></i> jQuery Color</a><br />
+					<a href='#'><i class="fa fa-arrow-up fa-fw" style='font-size:16px;'></i> Back to top</a><br />
+					<a href='//fortawesome.github.io/Font-Awesome/'><i class="fa fa-flag fa-fw" style='font-size:16px;'></i> Font Awesome</a><br />
+					<a href='//jquery.com'><i class="fa fa-external-link fa-fw" style='font-size:16px;'></i> jQuery</a><br />
+					<a href='//jqueryui.com'><i class="fa fa-external-link fa-fw" style='font-size:16px;'></i> jQuery UI</a><br />
+					<a href='//github.com/jquery/jquery-color/'><i class="fa fa-external-link fa-fw" style='font-size:16px;'></i> jQuery Color</a><br />
 				</span>
 				<span>
-					<a href='//repod.github.io/psdle'><i class="fa fa-home"></i> Home</a><br />
-					<a href='//github.com/RePod/psdle/'><i class="fa fa-code-fork"></i> Repository</a><br />
-					<a href='//github.com/RePod/psdle/wiki/Submit-a-Bug-or-Translation'><i class="fa fa-exclamation-circle"></i> Submit an Issue</a><br />
-					<a href='//github.com/RePod/psdle/blob/master/LICENSE'><i class="fa fa-file-text"></i> PSDLE License</a><br />
-					<a href='//github.com/RePod'><i class="fa fa-plus"></i> More</a><br />
+					<a href='//repod.github.io/psdle'><i class="fa fa-home fa-fw"></i> Home</a><br />
+					<a href='//github.com/RePod/psdle/'><i class="fa fa-code-fork fa-fw"></i> Repository</a><br />
+					<a href='//github.com/RePod/psdle/wiki/Submit-a-Bug-or-Translation'><i class="fa fa-exclamation-circle fa-fw"></i> Submit an Issue</a><br />
+					<a href='//github.com/RePod/psdle/blob/master/LICENSE'><i class="fa fa-file-text fa-fw"></i> PSDLE License</a><br />
+					<a href='//github.com/RePod'><i class="fa fa-plus fa-fw"></i> More</a><br />
 				</span><br /><br />
 				<span class='text'>
 					PSDLE is not sponsored, endorsed, or created by Sony, SNEI, SCEA, SCEE, SCEI, or affiliates.<br />
