--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
 				</span><br /><br />
 				<span class='text'>
 					PSDLE is not sponsored, endorsed, or created by Sony, SNEI, SCEA, SCEE, SCEI, or affiliates.<br />
-					Third-party content (icons, names) re-rendered by PSDLE is provided from the Entitlements API.
+					Third-party content (icons, names) re-rendered by PSDLE is provided from the Entitlements API.<br />
+					Screenshots are for educational and informative purposes and are not hosted on this domain.
 				</span>
 			</div>
 		</div>
