GH-PAGES - Better GA Events
Easier for goals. Drag event rewritten to just one submission.

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 					<a href='#getting_started' title="Getting Started"><i class="fa fa-check-square-o fa-fw"></i></a>
 					<a href='#paq' title="P.A.Q."><i class="fa fa-question fa-fw"></i></a>
 					<div class='vline'></div>
-					<a href='psdle.user.js' id='get_us' title="Download the Userscript.<br />Activates automatically!"><i class="fa fa-download fa-fw"></i></a>
-					<a href='javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);' id='get_bookmark' title="Bookmark or copy this!<br />Access bookmark from the store."><span style='display:none'>Run PSDLE</span><i class="fa fa-bookmark fa-fw"></i></a>
+					<a id='get_userscript' href='./psdle.user.js' title="Download the Userscript.<br />Activates automatically!"><i class="fa fa-download fa-fw"></i></a>
+					<a id='get_bookmark' href='javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);' title="Bookmark or copy this!<br />Access bookmark from the store."><span style='display:none'>Run PSDLE</span><i class="fa fa-bookmark fa-fw"></i></a>
 					<div class='vline'></div>
 					<a href='//repod.github.io/psdle' title="Home"><i class="fa fa-home fa-fw"></i></a>
 					<a href='//github.com/RePod/psdle/' title="Repository"><i class="fa fa-code-fork fa-fw"></i></a>
@@ -98,8 +98,8 @@
 						<h3 tabindex="0"><i class="fa fa-check-square-o fa-fw"></i> Getting Started <i class="module_toggle fa fa-caret-up"></i></h3>
 					</a>
 					<div>
-						<span class='psdle_fancy_bar'><span id='get_userscript' tabindex="0">Userscript</span><a href="//wikipedia.org/wiki/Greasemonkey" target="_blank"><span>?</span></a></span>
-						<span class='psdle_fancy_bar'><span class='get_bookmarklet' tabindex="0">Bookmarklet</span><a href="//wikipedia.org/wiki/Bookmarklet" target="_blank"><span>?</span></a></span><br />
+						<span class='psdle_fancy_bar'><span id='pill_get_us' tabindex="0">Userscript</span><a href="//wikipedia.org/wiki/Greasemonkey" target="_blank"><span>?</span></a></span>
+						<span class='psdle_fancy_bar'><span id='pill_get_bookmarklet' class='get_bookmarklet' tabindex="0">Bookmarklet</span><a href="//wikipedia.org/wiki/Bookmarklet" target="_blank"><span>?</span></a></span><br />
 						<br />
 						<strong>Direct:</strong><br />
 						<ol>
