GH-PAGES - Privacy Policy
Simple and clean.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 					<a href='#features' title="Features"><i class="fa fa-star fa-fw"></i></a>
 					<a href='#getting_started' title="Getting Started"><i class="fa fa-check-square-o fa-fw"></i></a>
 					<a href='#paq' title="P.A.Q."><i class="fa fa-question fa-fw"></i></a>
+					<a href='#privacy' title="Privacy Policy"><i class="fa fa-eye fa-fw"></i></a>
 					<div class='vline'></div>
 					<a id='get_userscript' href='./psdle.user.js' title="Download the Userscript.<br />Activates automatically!"><i class="fa fa-download fa-fw"></i></a>
 					<a id='get_bookmark' href='javascript:$.getScript("//repod.github.io/psdle/psdle.js");void(0);' title="Bookmark or copy this!<br />Access bookmark from the store."><span style='display:none'>Run PSDLE</span><i class="fa fa-bookmark fa-fw"></i></a>
@@ -150,6 +151,36 @@
 						</span>
 						<br />
 						More soon(tm).
+					</div>
+				</div>
+				<div class='module'>
+					<a name="paq">
+						<h3 tabindex="0"><i class="fa fa-eye fa-fw"></i> Privacy Policy <i class="module_toggle fa fa-caret-down"></i></h3>
+					</a>
+					<div class='start_hidden'>
+						<small>This policy is only in regards to this website's use of Google Analytics, not PSDLE itself which does not transmit information.</small><br />
+						<br />
+						<p>
+							This website uses <a href="//www.google.com/analytics/">Google Analytics</a> to collect various non-indentifiable information about you, the visitor, including but not limited to:<br />
+							<ul>
+								<li>How you reached this website <small>(another website, a search engine, etc.)</small></li>
+								<li>General browser and OS information <small>(Chrome/Firefox, Windows/OSX, screen resolution, mobile device, etc.)</small></li>
+								<li>How you interact with this site <small>(Such as expanding this Privacy Policy section!)</small></li>
+								<li>And a lot more. <a href="//support.google.com/analytics/topic/2919631?hl=en&ref_topic=1008008">Click here</a> to see Google's documentation about Analytics.</li>
+							</ul>
+							To repeat, all information collected through Google Analytics is non-indentifiable, or <strong>anonymous</strong>.
+						</p>
+						<strong>How and why I use the data collected:</strong>
+						<p>
+						By analyzing the data I receive I can make educated decisions about my website design such as how users interact with features and prioritize functionality.
+						For instance, based on interactions with the image carousel I can guage interest of it and expand its features or simplify it.
+						Basically, it's beneficial for everyone involved. The users get a better experience and I get the data that enables me to do just that.
+						</p>
+						<strong>Opting Out:</strong>
+						<p>
+						If this policy is not to your liking, but wish continue to use this page (not PSDLE) you may do so with <a href="//tools.google.com/dlpage/gaoptout">this add-on provided by Google.</a><br />
+						If the opt-out procedure is not to your liking I would advise ceasing use of this webpage completely.
+						</p>
 					</div>
 				</div>
 			</div>
