GH-PAGES - Privacy Anchor
Could have sworn I changed it, apparently not.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					</div>
 				</div>
 				<div class='module'>
-					<a name="paq">
+					<a name="privacy">
 						<h3 tabindex="0"><i class="fa fa-eye fa-fw"></i> Privacy Policy <i class="module_toggle fa fa-caret-down"></i></h3>
 					</a>
 					<div class='start_hidden'>
