GH-PAGES - How?

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>PSDLE</title>
@@ -28,7 +28,7 @@
 	<body>
 		<div id='container'>
 			<div id='header' class='psdle_blue'>
-				<a href='//repod.github.io/psdle'"><img id='psdle_logo' src='logo/3_psdle_mini.png' alt='psdle' /></a>
+				<a href='//repod.github.io/psdle'><img id='psdle_logo' src='logo/3_psdle_mini.png' alt='psdle' /></a>
 				<div id='menu'>
 					<a href='#' title="Back to top" id="btt" class='start_hidden'><i class="fa fa-arrow-up fa-fw"></i></a>
 					<a href='#features' title="Features"><i class="fa fa-star fa-fw"></i></a>
